--- a/index.html
+++ b/index.html
@@ -8,6 +8,75 @@
   <title>Happy New Year</title>
 </head>
 <body>
-  
+  <div class="sentence">
+    <div class="sentence__word">
+      <div class="sentence__letter h">
+        <div class="sentence__letter_alignment_vertical"></div>
+        <div class="sentence__letter_alignment_horizontal"></div>
+        <div class="sentence__letter_alignment_vertical"></div>
+      </div>
+      <div class="sentence__letter a">
+        <div class="sentence__letter_alignment_diagonal-to-left"></div>
+        <div class="sentence__letter_alignment_horizontal"></div>
+        <div class="sentence__letter_alignment_diagonal-to-right"></div>
+      </div>
+      <div class="sentence__letter p">
+        <div class="sentence__letter_alignment_vertical"></div>
+        <div class="sentence__letter_round-right"></div>
+      </div>
+      <div class="sentence__letter p">
+        <div class="sentence__letter_alignment_vertical"></div>
+        <div class="sentence__letter_round-right"></div>
+      </div>
+      <div class="sentence__letter y">
+        <div class="sentence__letter_alignment_diagonal-to-right"></div>
+        <div class="sentence__letter_alignment_diagonal-to-left"></div>
+        <div class="sentence__letter_alignment_vertical"></div>
+      </div>
+    </div>
+    <div class="sentence__word">
+      <div class="sentence__letter n">
+        <div class="sentence__letter_alignment_vertical"></div>
+        <div class="sentence__letter_alignment_diagonal-to-right"></div>
+        <div class="sentence__letter_alignment_vertical"></div>
+      </div>
+      <div class="sentence__letter e">
+        <div class="sentence__letter_alignment_vertical"></div>
+        <div class="sentence__letter_alignment_horizontal"></div>
+        <div class="sentence__letter_alignment_horizontal"></div>
+        <div class="sentence__letter_alignment_horizontal"></div>
+      </div>
+      <div class="sentence__letter w">
+        <div class="sentence__letter_alignment_diagonal-to-right"></div>
+        <div class="sentence__letter_alignment_diagonal-to-left"></div>
+        <div class="sentence__letter_alignment_diagonal-to-right"></div>
+        <div class="sentence__letter_alignment_vertical"></div>
+        <div class="sentence__letter_alignment_diagonal-to-left"></div>
+      </div>
+    </div>
+    <div class="sentence__word">
+      <div class="sentence__letter y">
+        <div class="sentence__letter_alignment_diagonal-to-right"></div>
+        <div class="sentence__letter_alignment_diagonal-to-left"></div>
+        <div class="sentence__letter_alignment_vertical"></div>
+      </div>
+      <div class="sentence__letter e">
+        <div class="sentence__letter_alignment_vertical"></div>
+        <div class="sentence__letter_alignment_horizontal"></div>
+        <div class="sentence__letter_alignment_horizontal"></div>
+        <div class="sentence__letter_alignment_horizontal"></div>
+      </div>
+      <div class="sentence__letter a">
+        <div class="sentence__letter_alignment_diagonal-to-left"></div>
+        <div class="sentence__letter_alignment_horizontal"></div>
+        <div class="sentence__letter_alignment_diagonal-to-right"></div>
+      </div>
+      <div class="sentence__letter r">
+        <div class="sentence__letter_alignment_vertical"></div>
+        <div class="sentence__letter_round-right"></div>
+        <div class="sentence__letter_alignment_diagonal-to-right"></div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
