Format document index html

--- a/index.html
+++ b/index.html
@@ -1,82 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Happy New Year</title>
-</head>
-<body>
-  <div class="sentence">
-    <div class="sentence__word">
-      <div class="sentence__letter h">
-        <div class="sentence__letter_alignment_vertical"></div>
-        <div class="sentence__letter_alignment_horizontal"></div>
-        <div class="sentence__letter_alignment_vertical"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Happy New Year</title>
+  </head>
+  <body>
+    <div class="sentence">
+      <div class="sentence__word">
+        <div class="sentence__letter h">
+          <div class="sentence__letter_alignment_vertical"></div>
+          <div class="sentence__letter_alignment_horizontal"></div>
+          <div class="sentence__letter_alignment_vertical"></div>
+        </div>
+        <div class="sentence__letter a">
+          <div class="sentence__letter_alignment_diagonal-to-left"></div>
+          <div class="sentence__letter_alignment_horizontal"></div>
+          <div class="sentence__letter_alignment_diagonal-to-right"></div>
+        </div>
+        <div class="sentence__letter p">
+          <div class="sentence__letter_alignment_vertical"></div>
+          <div class="sentence__letter_round-right"></div>
+        </div>
+        <div class="sentence__letter p">
+          <div class="sentence__letter_alignment_vertical"></div>
+          <div class="sentence__letter_round-right"></div>
+        </div>
+        <div class="sentence__letter y">
+          <div class="sentence__letter_alignment_diagonal-to-right"></div>
+          <div class="sentence__letter_alignment_diagonal-to-left"></div>
+          <div class="sentence__letter_alignment_vertical"></div>
+        </div>
       </div>
-      <div class="sentence__letter a">
-        <div class="sentence__letter_alignment_diagonal-to-left"></div>
-        <div class="sentence__letter_alignment_horizontal"></div>
-        <div class="sentence__letter_alignment_diagonal-to-right"></div>
+      <div class="sentence__word">
+        <div class="sentence__letter n">
+          <div class="sentence__letter_alignment_vertical"></div>
+          <div class="sentence__letter_alignment_diagonal-to-right"></div>
+          <div class="sentence__letter_alignment_vertical"></div>
+        </div>
+        <div class="sentence__letter e">
+          <div class="sentence__letter_alignment_vertical"></div>
+          <div class="sentence__letter_alignment_horizontal"></div>
+          <div class="sentence__letter_alignment_horizontal"></div>
+          <div class="sentence__letter_alignment_horizontal"></div>
+        </div>
+        <div class="sentence__letter w">
+          <div class="sentence__letter_alignment_diagonal-to-right"></div>
+          <div class="sentence__letter_alignment_diagonal-to-left"></div>
+          <div class="sentence__letter_alignment_diagonal-to-right"></div>
+          <div class="sentence__letter_alignment_vertical"></div>
+          <div class="sentence__letter_alignment_diagonal-to-left"></div>
+        </div>
       </div>
-      <div class="sentence__letter p">
-        <div class="sentence__letter_alignment_vertical"></div>
-        <div class="sentence__letter_round-right"></div>
-      </div>
-      <div class="sentence__letter p">
-        <div class="sentence__letter_alignment_vertical"></div>
-        <div class="sentence__letter_round-right"></div>
-      </div>
-      <div class="sentence__letter y">
-        <div class="sentence__letter_alignment_diagonal-to-right"></div>
-        <div class="sentence__letter_alignment_diagonal-to-left"></div>
-        <div class="sentence__letter_alignment_vertical"></div>
+      <div class="sentence__word">
+        <div class="sentence__letter y">
+          <div class="sentence__letter_alignment_diagonal-to-right"></div>
+          <div class="sentence__letter_alignment_diagonal-to-left"></div>
+          <div class="sentence__letter_alignment_vertical"></div>
+        </div>
+        <div class="sentence__letter e">
+          <div class="sentence__letter_alignment_vertical"></div>
+          <div class="sentence__letter_alignment_horizontal"></div>
+          <div class="sentence__letter_alignment_horizontal"></div>
+          <div class="sentence__letter_alignment_horizontal"></div>
+        </div>
+        <div class="sentence__letter a">
+          <div class="sentence__letter_alignment_diagonal-to-left"></div>
+          <div class="sentence__letter_alignment_horizontal"></div>
+          <div class="sentence__letter_alignment_diagonal-to-right"></div>
+        </div>
+        <div class="sentence__letter r">
+          <div class="sentence__letter_alignment_vertical"></div>
+          <div class="sentence__letter_round-right"></div>
+          <div class="sentence__letter_alignment_diagonal-to-right"></div>
+        </div>
       </div>
     </div>
-    <div class="sentence__word">
-      <div class="sentence__letter n">
-        <div class="sentence__letter_alignment_vertical"></div>
-        <div class="sentence__letter_alignment_diagonal-to-right"></div>
-        <div class="sentence__letter_alignment_vertical"></div>
-      </div>
-      <div class="sentence__letter e">
-        <div class="sentence__letter_alignment_vertical"></div>
-        <div class="sentence__letter_alignment_horizontal"></div>
-        <div class="sentence__letter_alignment_horizontal"></div>
-        <div class="sentence__letter_alignment_horizontal"></div>
-      </div>
-      <div class="sentence__letter w">
-        <div class="sentence__letter_alignment_diagonal-to-right"></div>
-        <div class="sentence__letter_alignment_diagonal-to-left"></div>
-        <div class="sentence__letter_alignment_diagonal-to-right"></div>
-        <div class="sentence__letter_alignment_vertical"></div>
-        <div class="sentence__letter_alignment_diagonal-to-left"></div>
-      </div>
-    </div>
-    <div class="sentence__word">
-      <div class="sentence__letter y">
-        <div class="sentence__letter_alignment_diagonal-to-right"></div>
-        <div class="sentence__letter_alignment_diagonal-to-left"></div>
-        <div class="sentence__letter_alignment_vertical"></div>
-      </div>
-      <div class="sentence__letter e">
-        <div class="sentence__letter_alignment_vertical"></div>
-        <div class="sentence__letter_alignment_horizontal"></div>
-        <div class="sentence__letter_alignment_horizontal"></div>
-        <div class="sentence__letter_alignment_horizontal"></div>
-      </div>
-      <div class="sentence__letter a">
-        <div class="sentence__letter_alignment_diagonal-to-left"></div>
-        <div class="sentence__letter_alignment_horizontal"></div>
-        <div class="sentence__letter_alignment_diagonal-to-right"></div>
-      </div>
-      <div class="sentence__letter r">
-        <div class="sentence__letter_alignment_vertical"></div>
-        <div class="sentence__letter_round-right"></div>
-        <div class="sentence__letter_alignment_diagonal-to-right"></div>
-      </div>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
