--- a/index.html
+++ b/index.html
@@ -4,79 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Happy New Year</title>
   </head>
   <body>
-    <div class="sentence">
-      <div class="sentence__word">
-        <div class="sentence__letter h">
-          <div class="sentence__letter_alignment_vertical"></div>
-          <div class="sentence__letter_alignment_horizontal"></div>
-          <div class="sentence__letter_alignment_vertical"></div>
+    <main>
+      <div class="sentence">
+        <div class="sentence__word">
+          <div class="sentence__letter h">h</div>
+          <div class="sentence__letter">appy</div>
         </div>
-        <div class="sentence__letter a">
-          <div class="sentence__letter_alignment_diagonal-to-left"></div>
-          <div class="sentence__letter_alignment_horizontal"></div>
-          <div class="sentence__letter_alignment_diagonal-to-right"></div>
+        <div class="sentence__word">
+          <div class="sentence__letter n">n</div>
+          <div class="sentence__letter">ew</div>
         </div>
-        <div class="sentence__letter p">
-          <div class="sentence__letter_alignment_vertical"></div>
-          <div class="sentence__letter_round-right"></div>
+        <div class="sentence__word">
+          <div class="sentence__letter y">y</div>
+          <div class="sentence__letter">ear</div>
         </div>
-        <div class="sentence__letter p">
-          <div class="sentence__letter_alignment_vertical"></div>
-          <div class="sentence__letter_round-right"></div>
-        </div>
-        <div class="sentence__letter y">
-          <div class="sentence__letter_alignment_diagonal-to-right"></div>
-          <div class="sentence__letter_alignment_diagonal-to-left"></div>
-          <div class="sentence__letter_alignment_vertical"></div>
+        <div class="sentence__word sentence__word_year">
+          <div class="sentence__letter">202</div>
+          <div class="sentence__letter two">2</div>
+          <div class="sentence__letter three">3</div>
         </div>
       </div>
-      <div class="sentence__word">
-        <div class="sentence__letter n">
-          <div class="sentence__letter_alignment_vertical"></div>
-          <div class="sentence__letter_alignment_diagonal-to-right"></div>
-          <div class="sentence__letter_alignment_vertical"></div>
-        </div>
-        <div class="sentence__letter e">
-          <div class="sentence__letter_alignment_vertical"></div>
-          <div class="sentence__letter_alignment_horizontal"></div>
-          <div class="sentence__letter_alignment_horizontal"></div>
-          <div class="sentence__letter_alignment_horizontal"></div>
-        </div>
-        <div class="sentence__letter w">
-          <div class="sentence__letter_alignment_diagonal-to-right"></div>
-          <div class="sentence__letter_alignment_diagonal-to-left"></div>
-          <div class="sentence__letter_alignment_diagonal-to-right"></div>
-          <div class="sentence__letter_alignment_vertical"></div>
-          <div class="sentence__letter_alignment_diagonal-to-left"></div>
-        </div>
-      </div>
-      <div class="sentence__word">
-        <div class="sentence__letter y">
-          <div class="sentence__letter_alignment_diagonal-to-right"></div>
-          <div class="sentence__letter_alignment_diagonal-to-left"></div>
-          <div class="sentence__letter_alignment_vertical"></div>
-        </div>
-        <div class="sentence__letter e">
-          <div class="sentence__letter_alignment_vertical"></div>
-          <div class="sentence__letter_alignment_horizontal"></div>
-          <div class="sentence__letter_alignment_horizontal"></div>
-          <div class="sentence__letter_alignment_horizontal"></div>
-        </div>
-        <div class="sentence__letter a">
-          <div class="sentence__letter_alignment_diagonal-to-left"></div>
-          <div class="sentence__letter_alignment_horizontal"></div>
-          <div class="sentence__letter_alignment_diagonal-to-right"></div>
-        </div>
-        <div class="sentence__letter r">
-          <div class="sentence__letter_alignment_vertical"></div>
-          <div class="sentence__letter_round-right"></div>
-          <div class="sentence__letter_alignment_diagonal-to-right"></div>
-        </div>
-      </div>
-    </div>
+    </main>
   </body>
 </html>
